--- a/styles.css
+++ b/styles.css
@@ -14,13 +14,15 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
-  gap: 0.2rem;
-  background-color: black;
-  padding: 0.2rem;
+  gap: 0.5rem;
+  background-color: rgb(32, 33, 36);
+  padding: 0.8rem;
+  border-radius: 10px;
 }
 
 .cell {
-  background-color: white;
+  background-color: #3b3b3b;
+  border-radius: 2px;
   padding: 1rem;
   width: 4rem;
   height: 4rem;
@@ -28,7 +30,7 @@
   justify-content: center;
   align-items: center;
   font-size: 3rem;
-  transition: all 0.5s;
+  transition: all 0.3s;
 }
 
 .pre-animation {
@@ -36,7 +38,15 @@
 }
 
 .cell:hover {
-  background-color: aliceblue;
+  background-color: rgb(95, 99, 104);
+}
+
+.red {
+  color: rgb(245, 164, 59);
+}
+
+.blue {
+  color: rgb(138, 180, 248);
 }
 
 body {
